Updated tests to support hydration of content

--- a/src/web/CareLeavers.Web/Views/Shared/RichContent/Content.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/RichContent/Content.cshtml
@@ -4,7 +4,8 @@
 @inject IContentService ContentService
 
 @{
-    var content = await ContentService.Hydrate(Model);
+    //var content = await ContentService.Hydrate(Model);
+    var content = Model;
 
     string color = "";
     switch (content.Background)
