Run HTML through translation and cache

--- a/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
@@ -1,6 +1,6 @@
 @using CareLeavers.Web.Configuration
 @using Microsoft.Extensions.Options
-@model CareLeavers.Web.Models.ViewModels.HeaderViewModel
+@model CareLeavers.Web.Models.ViewModels.ConfigViewModel
 
 @inject IWebHostEnvironment WebHostEnvironment
 @inject IOptions<ScriptOptions> ScriptOptions
