--- a/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
@@ -1,4 +1,4 @@
-@model CareLeavers.Web.Models.Content.ContentfulConfigurationEntity
+@model CareLeavers.Web.Models.ViewModels.ConfigViewModel
 
 <footer class="govuk-footer " role="contentinfo">
     <div class="govuk-width-container ">
