Definition Links and Caching Improvements (#63)
* Added migrations for definition links

* Reduced some of the nesting to avoid circular references and massive JSON

* Updated to add definition blocks, content, and links

* Renamed this, as it does all hyperlinks now

* Added new renderers for definition blocks and links, plus renamed entitylink renderer as it renders all links now

* Updated to start getting some blocks etc to pull from contentful to avoid massive circular json responses and allow smaller mocking

TODO: Fix mocks

* Removed redundant limit

* Updated breadcrumbs and navigation to pull from the contentful service

* Updated to enable SimplePage to be serialised

* Attempting to clear the direct cache entry if changed, if needed

* Fixed sitemap test

* Updated tests to support hydration of content

* Added missing output snapshot

* Fixed E2E tests

--- a/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
@@ -6,18 +6,8 @@
 @inject  IContentService ContentService
 
 @{
-    var currentLink = ViewContext.RouteData.Values["slug"]?.ToString();
-    var currentPage = await ContentService.GetPage(currentLink);
-    
-    var config = await ConfigService.GetConfiguration();
-    var homePageSlug = config?.HomePage?.Slug;
-
-    while (currentPage != null && currentPage.Slug != homePageSlug && currentPage.Parent != null && currentPage.Parent.Slug != homePageSlug)
-    {
-        currentPage = currentPage.Parent;
-    }
-
-   currentLink = currentPage.Slug;
+    string currentPage = ViewContext.RouteData.Values["slug"]?.ToString();
+    var breadcrumbs = await ContentService.GetBreadcrumbs(currentPage, false);
 }
 
 <nav class="dfe-header__navigation" id="header-navigation" role="navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
@@ -35,7 +25,7 @@
             @foreach (var link in Model.Navigation)
             {
                 string className = "dfe-header__navigation-item";
-                if (link.Slug == currentLink)
+                if (link.Slug == currentPage || breadcrumbs.Exists(b => b.Slug == link.Slug))
                 {
                     className += " dfe-header__navigation-item--current";
                 }
