--- a/src/web/CareLeavers.Web/Views/Shared/RichContent/Content.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/RichContent/Content.cshtml
@@ -1,15 +1,21 @@
+@using CareLeavers.Web.Contentful
 @using CareLeavers.Web.Models.Enums
 @model CareLeavers.Web.Models.Content.RichContent
+@inject IContentService ContentService
+
 @{
+    //var content = await ContentService.Hydrate(Model);
+    var content = Model;
+
     string color = "";
-    switch (Model.Background)
+    switch (content.Background)
     {
         case BackgroundColour.Blue:
             color = "dfe box-ext";
             break;
     }
 
-    var width = Model.Width switch
+    var width = content.Width switch
     {
         ContentWidth.OneThird => "govuk-grid-column-one-third",
         ContentWidth.TwoThirds => "govuk-grid-column-two-thirds",
@@ -19,7 +25,7 @@
     @if (color != "")
     {
         <section class="dfe-section @color">
-            <gds-contentful-rich-text document="@Model.Content"/>
+            <gds-contentful-rich-text document="@content.Content"/>
         </section>
     }
     else
@@ -27,7 +33,7 @@
         <section class="dfe-section">
 
             <div class="@width">
-                <gds-contentful-rich-text document="@Model.Content"/>
+                <gds-contentful-rich-text document="@content.Content"/>
             </div>
 
         </section>
