Languages working on hardcoded pages

--- a/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
@@ -68,5 +68,5 @@
     <div class="dfe-width-container dfe-header__service-name">
         <a href="/" class="dfe-header__link--service">@Model.ContentfulConfiguration.ServiceName</a>
     </div>
-    @{ await Html.RenderPartialAsync("Navigation", Model.ContentfulConfiguration); }
+    @{ await Html.RenderPartialAsync("Navigation", Model); }
 </header>
