--- a/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
@@ -1,9 +1,9 @@
 @using CareLeavers.Web.Configuration
 @using CareLeavers.Web.Contentful
 @using Joonasw.AspNetCore.SecurityHeaders.TagHelpers
-@model CareLeavers.Web.Models.Content.ContentfulConfigurationEntity
+@model CareLeavers.Web.Models.ViewModels.ConfigViewModel
 @inject IContentfulConfiguration ConfigService
-@inject  IContentService ContentService
+@inject IContentService ContentService
 
 @{
     var currentLink = ViewContext.RouteData.Values["slug"]?.ToString();
@@ -32,7 +32,7 @@
             </button>
         </p>
         <ul class="dfe-header__navigation-list">
-            @foreach (var link in Model.Navigation)
+            @foreach (var link in Model.ContentfulConfiguration.Navigation)
             {
                 string className = "dfe-header__navigation-item";
                 if (link.Slug == currentLink)
@@ -41,7 +41,7 @@
                 }
 
                 <li class="@className">
-                    <a class="dfe-header__navigation-link" href="@Url.Action("GetContent", "Contentful", new { slug = link.Slug })">
+                    <a class="dfe-header__navigation-link" href="@Url.Action("GetContent", "Contentful", new { slug = link.Slug, languageCode = Model.Language.Code })">
                         @link.Title
                         <svg class="dfe-icon dfe-icon__chevron-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="34" height="34">
                             <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"></path>
