--- a/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
@@ -7,10 +7,10 @@
                 <h2 class="govuk-visually-hidden">Support links</h2>
                 <ul class="govuk-footer__inline-list">
                     <li class="govuk-footer__inline-list-item">
-                        @Html.ActionLink("Cookie Policy", "CookiePolicy", "Pages", null, new { @class = "govuk-footer__link" })
+                        @Html.ActionLink("Cookie Policy", "CookiePolicy", "Pages", new { languageCode = Model.Language.Code }, new { @class = "govuk-footer__link" })
                     </li>
                     <li class="govuk-footer__inline-list-item">
-                        @Html.ActionLink("Privacy Policies", "PrivacyPolicies", "Pages", null, new { @class = "govuk-footer__link" })
+                        @Html.ActionLink("Privacy Policies", "PrivacyPolicies", "Pages", new { languageCode = Model.Language.Code }, new { @class = "govuk-footer__link" })
                     </li>
                 </ul>
                 
