--- a/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
+++ b/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
@@ -51,7 +51,7 @@
         
         <partial name="LastUpdated" model="@Model"/>
         
-        <partial name="ShareThis" model="Model"/>
+        <partial name="Shareaholic" model="Model"/>
     </div>
     @if (Model.Width == PageWidth.TwoThirds)
     {
