--- a/src/web/CareLeavers.Web/Views/Shared/Shareaholic.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Shareaholic.cshtml
@@ -1,7 +1,12 @@
+@using CareLeavers.Web.Configuration
+@using Microsoft.Extensions.Options
 @model CareLeavers.Web.Models.Content.Page
+@inject IOptions<ScriptOptions> ScriptOptions
 
 @if (Model.ShowShareThis)
 {
+    var scriptConfig = ScriptOptions.Value;
+
     if (!Model.ShowLastUpdated)
     {
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible"/>
@@ -19,7 +24,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
             <h3 class="govuk-heading-m">Share this page</h3>
-            <div class="shareaholic-canvas" data-app="share_buttons" data-app-id="33246672"></div>
+            <div class="shareaholic-canvas" data-app="share_buttons" data-app-id="@scriptConfig.ShareaholicAppId"></div>
         </div>
     </div>
 }
