Show english name in translation list

--- a/src/web/CareLeavers.Web/Views/Translation/Index.cshtml
+++ b/src/web/CareLeavers.Web/Views/Translation/Index.cshtml
@@ -21,7 +21,7 @@
 {
     <li>
         @Html.ActionLink(
-            translation.NativeName, 
+            $"{translation.NativeName} ({translation.Name})", 
             "Homepage", 
             "Contentful", 
     new { languageCode = translation.Code }, 
