--- a/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
@@ -14,7 +14,7 @@
 
 @if (ScriptOptions.Value.ShowCookieBanner)
 {
-    <partial name="_CookieConsentPartial"/>
+    <partial name="_CookieConsentPartial" model="@Model"/>
 }
 
 <div class="govuk-width-container">
