Change translate icon

--- a/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
@@ -18,7 +18,7 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
   width: 90px;
   float: right;
   font-size: 1em;
-  background-image: url("/assets/icon-print.png");
+  background-image: url("/assets/icon-translate.png");
   background-repeat: no-repeat;
   background-size: contain;
 }
