--- a/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
@@ -43,9 +43,9 @@
             </button>
         </div>
         <div class="dfe-header__logo">
-            <a class="dfe-header__link dfe-header__link--service " href="~/" aria-label="DfE homepage">
-                <img src="~/assets/dfe-logo.png" class="dfe-logo" alt="DfE Homepage">
-                <img src="~/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="DfE Homepage">
+            <a class="dfe-header__link dfe-header__link--service " href="~/" aria-label="@Model.ServiceName homepage">
+                <img src="~/assets/dfe-logo.png" class="dfe-logo" alt="@Model.ServiceName homepage">
+                <img src="~/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="@Model.ServiceName homepage">
             </a>
         </div>
         <div class="dfe-header__content" id="content-header">
