Add Azure Translation functionality (#74)
* Add pick a translation screen and translation services

* Run HTML through translation and cache

* Languages working on hardcoded pages

* Show english name in translation list

* Translation caching

* Change translate icon

* Re-gen snapshots

* Translation configurable

* Terraform set up and PR tidy up

* Remove translations from cache in webhook

* Enable translation in tests

* Fix failing tests

* Fix e2e tests

* Fix tests

* Fix e2e tests links

--- a/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
@@ -1,4 +1,4 @@
-@model CareLeavers.Web.Models.Content.ContentfulConfigurationEntity
+@model CareLeavers.Web.Models.ViewModels.ConfigViewModel
 
 <footer class="govuk-footer " role="contentinfo">
     <div class="govuk-width-container ">
@@ -7,10 +7,10 @@
                 <h2 class="govuk-visually-hidden">Support links</h2>
                 <ul class="govuk-footer__inline-list">
                     <li class="govuk-footer__inline-list-item">
-                        @Html.ActionLink("Cookie Policy", "CookiePolicy", "Pages", null, new { @class = "govuk-footer__link" })
+                        @Html.ActionLink("Cookie Policy", "CookiePolicy", "Pages", new { languageCode = Model.Language.Code }, new { @class = "govuk-footer__link" })
                     </li>
                     <li class="govuk-footer__inline-list-item">
-                        @Html.ActionLink("Privacy Policies", "PrivacyPolicies", "Pages", null, new { @class = "govuk-footer__link" })
+                        @Html.ActionLink("Privacy Policies", "PrivacyPolicies", "Pages", new { languageCode = Model.Language.Code }, new { @class = "govuk-footer__link" })
                     </li>
                 </ul>
                 
