Fixed gov-uk-body still using GDS Transport font

--- a/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
@@ -9,7 +9,7 @@
 @import url('https://rsms.me/inter/inter.css');
 $govuk-font-family: 'Inter', sans-serif; // Override govuk font
 * {
-  font-family: $govuk-font-family; // Override all fonts to match
+  font-family: $govuk-font-family !important; // Override all fonts to match
 }
 
 .translate {
