--- a/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
@@ -22,7 +22,7 @@
         @if (Model.ContentfulConfiguration.TranslationEnabled)
         {
             <p class="translate">
-                @Html.ActionLink(Model.Language.NativeName, "Index", "Translation", null, new { @class = "govuk-link" })
+                @Html.ActionLink(Model.Language.NativeName, "Index", "Translation", null, new { @class = "govuk-link", rel="nofollow" })
             </p>
         }
         <div class="govuk-phase-banner__content">
@@ -34,7 +34,7 @@
                 @if (!string.IsNullOrEmpty(Model.ContentfulConfiguration.FeedbackText))
                 {
                     <text>
-                        Your <a class="govuk-link" href="@Model.ContentfulConfiguration.FeedbackUrl">@Model.ContentfulConfiguration.FeedbackText</a> will help us to improve it.
+                        Your <a class="govuk-link" href="@Model.ContentfulConfiguration.FeedbackUrl" rel="nofollow">@Model.ContentfulConfiguration.FeedbackText</a> will help us to improve it.
                     </text>
                 }
             </span>
