--- a/src/web/CareLeavers.Web/Views/Translation/Index.cshtml
+++ b/src/web/CareLeavers.Web/Views/Translation/Index.cshtml
@@ -5,6 +5,11 @@
     Layout = "_Layout";
 }
 
+@section Head
+{
+    <meta name="robots" content="noindex, nofollow" />
+}
+
 @section BeforeGDSContent
 {
     <div class="govuk-grid-row">
