--- a/src/web/CareLeavers.Web/Views/Pages/CookiePolicy.cshtml
+++ b/src/web/CareLeavers.Web/Views/Pages/CookiePolicy.cshtml
@@ -8,6 +8,23 @@
     Layout = "_Layout";
 
     var config = await ContentfulConfiguration.GetConfiguration();
+    var languageCode = Context.Request.RouteValues["languageCode"]?.ToString();
+}
+
+@section Head
+{
+    <meta property="og:site_name" content="@config.ServiceName"/>
+    <meta property="og:title" content="@ViewBag.Title"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="@Url.Action(
+                                         action: "CookiePolicy",
+                                         controller: "Pages",
+                                         protocol: "https",
+                                         values: new { language = languageCode}
+                                     )"/>
+    
+    <meta property="og:locale" content="en_GB"/>
+
 }
 
 @section BeforeGDSContent
