showShareThis changed to showShareLinks

--- a/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
+++ b/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
@@ -111,7 +111,7 @@
 
 @section Scripts
 {
-    @if (Model.ShowShareThis)
+    @if (Model.ShowShareLinks)
     {
         <script asp-add-nonce="true" defer>
             const printPage  = () => window.print();
