--- a/src/web/CareLeavers.Web/Views/Shared/Shareaholic.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Shareaholic.cshtml
@@ -3,7 +3,7 @@
 @model CareLeavers.Web.Models.Content.Page
 @inject IOptions<ScriptOptions> ScriptOptions
 
-@if (Model.ShowShareThis)
+@if (Model.ShowShareLinks)
 {
     var scriptConfig = ScriptOptions.Value;
 
