--- a/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
@@ -181,6 +181,7 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
  }
   .govuk-grid-column-two-thirds {
     width: 1200px;
+    padding: 0 15px;
   }
 }
 
