Updated to fix padding on blue boxes without breaking homepage layout

--- a/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
@@ -416,3 +416,7 @@ html
   max-width:100%; width:100%;
   margin: -35px auto 0;
 }
+
+.govuk-grid-column-two-thirds > .govuk-grid-row > .box-ext {
+  margin: 0 15px;
+}
