Only render the navigation if we don't have an error

--- a/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
@@ -62,5 +62,8 @@
     <div class="dfe-width-container dfe-header__service-name">
         @Model.ContentfulConfiguration.ServiceName
     </div>
-    @{ await Html.RenderPartialAsync("Navigation", Model); }
+    @if (!Model.IsError)
+    { 
+        await Html.RenderPartialAsync("Navigation", Model);
+    }
 </header>
