--- a/src/web/CareLeavers.Web/Views/Pages/Error.cshtml
+++ b/src/web/CareLeavers.Web/Views/Pages/Error.cshtml
@@ -7,18 +7,10 @@
 
 @section Head
 {
-    <meta property="og:site_name" content="Support for care leavers"/>
-    <meta property="og:title" content="@ViewBag.Title"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="@Url.Action(
-                                         action: "Error",
-                                         controller: "Pages",
-                                         protocol: "https",
-                                         values: new { language = "en"}
-                                     )"/>
-    
-    <meta property="og:locale" content="en_GB"/>
-
+    <meta name="robots" content="noindex, nofollow"/>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
 }
 
 @section BeforeGDSContent
