Fix issue with endless redirect, plus added help at hand link to the site

--- a/src/web/CareLeavers.Web/Views/Pages/PageNotFound.cshtml
+++ b/src/web/CareLeavers.Web/Views/Pages/PageNotFound.cshtml
@@ -35,3 +35,8 @@
 <p class="govuk-body">
     If you pasted the web address, check you copied the entire address.
 </p>
+<p class="govuk-body">
+    If the web address is correct or you selected a link or button, visit 
+    <a href="https://www.childrenscommissioner.gov.uk/help-at-hand" class="govuk-link">Help at Hand</a> 
+    to get help and support about being in care or if you’re a care leaver.
+</p>
