--- a/src/web/CareLeavers.Web/AssetSrc/scss/navigation.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/navigation.scss
@@ -1,11 +1,10 @@
-@media (max-width: 45em) {
+@media (max-width: 43em) {
   .govuk-service-navigation__container {
     flex-direction: column;
     align-items: start;
   }
 
   .govuk-service-navigation__toggle {
-    font-family: "GDS Transport", Arial, sans-serif;
     font-weight: 700;
     font-size: 1rem;
     line-height: 1.25;
@@ -42,7 +41,7 @@
   }
 
   .govuk-service-navigation__list {
-    display: none;
+    display: none !important;
     flex-direction: column;
     width: 100%;
     background-color: #ffffff;
@@ -52,7 +51,7 @@
   }
 
   .govuk-service-navigation__item {
-    display: block;
+    display: block !important;
     width: 100%;
     padding: 10px;
   }
@@ -62,7 +61,7 @@
   }
 }
 
-@media (min-width: 45.0625em) {
+@media (min-width: 43.0625em) {
   .govuk-service-navigation__container {
     flex-direction: row;
     flex-wrap: wrap;
@@ -81,7 +80,7 @@
   }
 
   .govuk-service-navigation__item {
-    display: inline-block;
+    display: inline-block !important;
     margin-right: 30px;
   }
 
@@ -99,8 +98,9 @@
   }
 
   .govuk-service-navigation__container {
-    display: flex;
+    display: flex !important;
     flex-direction: column;
     align-items: start;
   }
 }
+
